Minor code cleanup. Started adding support for CAN interfaces.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,4 @@
-;PlatformIO Project Configuration File
+; PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
 ;   Upload options: custom upload port, speed and extra flags
@@ -13,4 +13,7 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 upload_speed = 512000
+monitor_speed = 115200
 board_build.partitions = default.csv
+lib_deps = 
+	pierremolinaro/ACAN2515@^2.1.0
